// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conference should render and initialize the conference interface 1`] = `
<Fragment>
  <div
    id="jitsiMeet"
    style={
      Object {
        "alignItems": "center",
        "background": "#474747",
        "bottom": "20px",
        "display": "flex",
        "height": 10,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 10,
        "zIndex": 1100,
      }
    }
  />
  <div
    style={
      Object {
        "background": "black",
        "height": "100%",
        "left": 0,
        "opacity": 0.7,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1000,
      }
    }
  />
  <div
    style={
      Object {
        "alignItems": "center",
        "background": "#00000077",
        "bottom": "20px",
        "color": "white",
        "display": "flex",
        "fontSize": "48px",
        "height": 10,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 10,
        "zIndex": 1200,
      }
    }
  >
    <i
      className="fa fa-spinner fa-fw fa-pulse spinner"
    />
  </div>
  <div
    style={
      Object {
        "bottom": "-5px",
        "color": "white",
        "cursor": "pointer",
        "fontSize": "24px",
        "position": "absolute",
        "right": "25px",
        "top": "",
        "zIndex": 1200,
      }
    }
  >
    <i
      aria-label="Minimize"
      className="icon icon-arrow-collapse"
      onClick={[Function]}
    />
    <a
      href="http://test-meeting-link/test#config.callDisplayName=\\"Test topic\\""
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        Object {
          "color": "white",
        }
      }
      target="_blank"
    >
      <i
        aria-label="Open in new tab"
        className="icon icon-arrow-left"
        style={
          Object {
            "display": "inline-block",
            "transform": "rotate(135deg)",
          }
        }
      />
    </a>
    <i
      aria-label="Close"
      className="icon icon-close"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`Conference should render null if the post type is null 1`] = `""`;

exports[`Conference should show the correct buttons depending on the state should have down, open outside, maximize and close buttons 1`] = `
<Fragment>
  <div
    id="jitsiMeet"
    style={
      Object {
        "alignItems": "center",
        "background": "#474747",
        "bottom": "",
        "display": "flex",
        "height": 240,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "20px",
        "width": 320,
        "zIndex": 1100,
      }
    }
  />
  <div
    style={
      Object {
        "alignItems": "center",
        "background": "#00000077",
        "bottom": "",
        "color": "white",
        "display": "flex",
        "fontSize": "48px",
        "height": 240,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "20px",
        "width": 320,
        "zIndex": 1200,
      }
    }
  >
    <i
      className="fa fa-spinner fa-fw fa-pulse spinner"
    />
  </div>
  <div
    style={
      Object {
        "bottom": "",
        "color": "white",
        "cursor": "pointer",
        "fontSize": "24px",
        "position": "absolute",
        "right": "25px",
        "top": "25px",
        "zIndex": 1200,
      }
    }
  >
    <i
      aria-label="Move down"
      className="icon icon-arrow-left"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-block",
          "transform": "rotate(270deg)",
        }
      }
    />
    <i
      aria-label="Maximize"
      className="icon icon-arrow-expand"
      onClick={[Function]}
    />
    <a
      href="http://test-meeting-link/test#config.callDisplayName=\\"Test topic\\""
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        Object {
          "color": "white",
        }
      }
      target="_blank"
    >
      <i
        aria-label="Open in new tab"
        className="icon icon-arrow-left"
        style={
          Object {
            "display": "inline-block",
            "transform": "rotate(135deg)",
          }
        }
      />
    </a>
    <i
      aria-label="Close"
      className="icon icon-close"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`Conference should show the correct buttons depending on the state should have open outside, minimize and close buttons 1`] = `
<Fragment>
  <div
    id="jitsiMeet"
    style={
      Object {
        "alignItems": "center",
        "background": "#474747",
        "bottom": "20px",
        "display": "flex",
        "height": 10,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 10,
        "zIndex": 1100,
      }
    }
  />
  <div
    style={
      Object {
        "background": "black",
        "height": "100%",
        "left": 0,
        "opacity": 0.7,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1000,
      }
    }
  />
  <div
    style={
      Object {
        "alignItems": "center",
        "background": "#00000077",
        "bottom": "20px",
        "color": "white",
        "display": "flex",
        "fontSize": "48px",
        "height": 10,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 10,
        "zIndex": 1200,
      }
    }
  >
    <i
      className="fa fa-spinner fa-fw fa-pulse spinner"
    />
  </div>
  <div
    style={
      Object {
        "bottom": "-5px",
        "color": "white",
        "cursor": "pointer",
        "fontSize": "24px",
        "position": "absolute",
        "right": "25px",
        "top": "",
        "zIndex": 1200,
      }
    }
  >
    <i
      aria-label="Minimize"
      className="icon icon-arrow-collapse"
      onClick={[Function]}
    />
    <a
      href="http://test-meeting-link/test#config.callDisplayName=\\"Test topic\\""
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        Object {
          "color": "white",
        }
      }
      target="_blank"
    >
      <i
        aria-label="Open in new tab"
        className="icon icon-arrow-left"
        style={
          Object {
            "display": "inline-block",
            "transform": "rotate(135deg)",
          }
        }
      />
    </a>
    <i
      aria-label="Close"
      className="icon icon-close"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`Conference should show the correct buttons depending on the state should have up, open outside, maximize and close buttons 1`] = `
<Fragment>
  <div
    id="jitsiMeet"
    style={
      Object {
        "alignItems": "center",
        "background": "#474747",
        "bottom": "20px",
        "display": "flex",
        "height": 240,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 320,
        "zIndex": 1100,
      }
    }
  />
  <div
    style={
      Object {
        "alignItems": "center",
        "background": "#00000077",
        "bottom": "20px",
        "color": "white",
        "display": "flex",
        "fontSize": "48px",
        "height": 240,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 320,
        "zIndex": 1200,
      }
    }
  >
    <i
      className="fa fa-spinner fa-fw fa-pulse spinner"
    />
  </div>
  <div
    style={
      Object {
        "bottom": "225px",
        "color": "white",
        "cursor": "pointer",
        "fontSize": "24px",
        "position": "absolute",
        "right": "25px",
        "top": "",
        "zIndex": 1200,
      }
    }
  >
    <i
      aria-label="Move up"
      className="icon icon-arrow-left"
      onClick={[Function]}
      style={
        Object {
          "display": "inline-block",
          "transform": "rotate(90deg)",
        }
      }
    />
    <i
      aria-label="Maximize"
      className="icon icon-arrow-expand"
      onClick={[Function]}
    />
    <a
      href="http://test-meeting-link/test#config.callDisplayName=\\"Test topic\\""
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        Object {
          "color": "white",
        }
      }
      target="_blank"
    >
      <i
        aria-label="Open in new tab"
        className="icon icon-arrow-left"
        style={
          Object {
            "display": "inline-block",
            "transform": "rotate(135deg)",
          }
        }
      />
    </a>
    <i
      aria-label="Close"
      className="icon icon-close"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`Conference should show the the loading spinner depending on the state should not show loading 1`] = `
<Fragment>
  <div
    id="jitsiMeet"
    style={
      Object {
        "alignItems": "center",
        "background": "#474747",
        "bottom": "20px",
        "display": "flex",
        "height": 10,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 10,
        "zIndex": 1100,
      }
    }
  />
  <div
    style={
      Object {
        "background": "black",
        "height": "100%",
        "left": 0,
        "opacity": 0.7,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1000,
      }
    }
  />
  <div
    style={
      Object {
        "bottom": "-5px",
        "color": "white",
        "cursor": "pointer",
        "fontSize": "24px",
        "position": "absolute",
        "right": "25px",
        "top": "",
        "zIndex": 1200,
      }
    }
  >
    <i
      aria-label="Minimize"
      className="icon icon-arrow-collapse"
      onClick={[Function]}
    />
    <a
      href="http://test-meeting-link/test#config.callDisplayName=\\"Test topic\\""
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        Object {
          "color": "white",
        }
      }
      target="_blank"
    >
      <i
        aria-label="Open in new tab"
        className="icon icon-arrow-left"
        style={
          Object {
            "display": "inline-block",
            "transform": "rotate(135deg)",
          }
        }
      />
    </a>
    <i
      aria-label="Close"
      className="icon icon-close"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`Conference should show the the loading spinner depending on the state should show loading 1`] = `
<Fragment>
  <div
    id="jitsiMeet"
    style={
      Object {
        "alignItems": "center",
        "background": "#474747",
        "bottom": "20px",
        "display": "flex",
        "height": 10,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 10,
        "zIndex": 1100,
      }
    }
  />
  <div
    style={
      Object {
        "background": "black",
        "height": "100%",
        "left": 0,
        "opacity": 0.7,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1000,
      }
    }
  />
  <div
    style={
      Object {
        "alignItems": "center",
        "background": "#00000077",
        "bottom": "20px",
        "color": "white",
        "display": "flex",
        "fontSize": "48px",
        "height": 10,
        "justifyContent": "center",
        "position": "absolute",
        "right": "20px",
        "top": "",
        "width": 10,
        "zIndex": 1200,
      }
    }
  >
    <i
      className="fa fa-spinner fa-fw fa-pulse spinner"
    />
  </div>
  <div
    style={
      Object {
        "bottom": "-5px",
        "color": "white",
        "cursor": "pointer",
        "fontSize": "24px",
        "position": "absolute",
        "right": "25px",
        "top": "",
        "zIndex": 1200,
      }
    }
  >
    <i
      aria-label="Minimize"
      className="icon icon-arrow-collapse"
      onClick={[Function]}
    />
    <a
      href="http://test-meeting-link/test#config.callDisplayName=\\"Test topic\\""
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        Object {
          "color": "white",
        }
      }
      target="_blank"
    >
      <i
        aria-label="Open in new tab"
        className="icon icon-arrow-left"
        style={
          Object {
            "display": "inline-block",
            "transform": "rotate(135deg)",
          }
        }
      />
    </a>
    <i
      aria-label="Close"
      className="icon icon-close"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;
